opt(shell): opt build file